[package]
name = "pod-philippkueng-mail"
version = "0.0.1"
authors = ["Philipp Küng <pod-philippkueng-mail@philippkueng.ch>"]
edition = "2021"
description = "A babashka pod for sending emails"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.10"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0"
bencode_rs = { git = "https://github.com/jasilven/bencode_rs", tag = "v0.1.0" }